syntax = "proto3";

package io.harness.eventsframework.account;

option java_multiple_files = true;

message AccountEntityChangeDTO {
  string accountId = 1;
}